[project]
name = "adverse-media-agent-autogen"
version = "0.1.0"
description = "Adverse media screening using Microsoft AutoGen multi-agent framework"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.4",
    "autogen-ext[openai]>=0.4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
